--- a/mobile_hivemind/gradle/libs.versions.toml
+++ b/mobile_hivemind/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigationFragment = "2.9.0"
 navigationUi = "2.9.0"
 googleGmsGoogleServices = "4.4.3"
 firebaseAi = "16.2.0"
+activity = "1.10.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -25,6 +26,7 @@ lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-view
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
+activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
