Página de configurações feita
o saco agora vai ser fazer uma página pra cada um dos itens na lista

--- a/mobile_hivemind/app/src/main/AndroidManifest.xml
+++ b/mobile_hivemind/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
         android:theme="@style/Theme.Mobile_hivemind"
         tools:targetApi="31">
         <activity
+            android:name=".ui.auth.cadastro.CadastroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.login.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreenActivity"
             android:exported="false" />
         <activity
