--- a/mobile_hivemind/app/src/main/AndroidManifest.xml
+++ b/mobile_hivemind/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.Mobile_hivemind"
         tools:targetApi="31">
         <activity
-            android:name=".ui.auth.cadastro.CadastroActivity"
+            android:name=".ui.auth.CadastroActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.login.LoginActivity"
