--- a/mobile_hivemind/gradle/libs.versions.toml
+++ b/mobile_hivemind/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ navigationUi = "2.9.0"
 googleGmsGoogleServices = "4.4.3"
 firebaseAi = "16.2.0"
 activity = "1.10.1"
+playServicesBase = "18.7.2"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,6 +28,7 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+play-services-base = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServicesBase" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
