--- a/mobile_hivemind/gradle/libs.versions.toml
+++ b/mobile_hivemind/gradle/libs.versions.toml
@@ -1,18 +1,20 @@
 [versions]
-agp = "8.8.0"
+agp = "8.8.2"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.1"
 material = "1.12.0"
 constraintlayout = "2.2.1"
-lifecycleLivedataKtx = "2.9.1"
-lifecycleViewmodelKtx = "2.9.1"
-navigationFragment = "2.9.0"
-navigationUi = "2.9.0"
+lifecycleLivedataKtx = "2.9.2"
+lifecycleViewmodelKtx = "2.9.2"
+materialCalendarview = "1.4.3"
+navigationFragment = "2.9.2"
+navigationUi = "2.9.2"
 googleGmsGoogleServices = "4.4.3"
-firebaseAi = "16.2.0"
+firebaseAi = "17.0.0"
 activity = "1.10.1"
+playServicesAuth = "21.4.0"
 playServicesBase = "18.7.2"
 
 [libraries]
@@ -24,10 +26,12 @@ material = { group = "com.google.android.material", name = "material", version.r
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+material-calendarview = { module = "com.prolificinteractive:material-calendarview", version.ref = "materialCalendarview" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 play-services-base = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServicesBase" }
 
 [plugins]
