--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,11 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Change directory to mobile_hivemind
+      run: cd mobile_hivemind
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew build
