--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -20,6 +20,13 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Set environment variables
+      run: |
+        echo "APPLICATION_NAME=${{ secrets.APPLICATION_NAME }}" >> $GITHUB_ENV
+        echo "DB_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+        echo "DB_USERNAME=${{ secrets.DATABASE_USERNAME }}" >> $GITHUB_ENV
+        echo "DB_PASSWORD=${{ secrets.DATABASE_PASSWORD }}" >> $GITHUB_ENV
+
     - name: Build and Test with Maven
       run: cd API_Rest && mvn -B verify --file pom.xml
 
