--- a/API_Rest/src/main/resources/application.properties
+++ b/API_Rest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=${APPLICATION_NAME}
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
